[metadata]
name = i-vis-core
description = Core functionality of Integrated Variant Information System (I-VIS)
long_description = file: README.md
long_description_content_type = text/markdown
author = Michael Piechotta
author_email = michael.piechotta@gmail.com
url = https://i-vis-api.readthedocs.org/
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
license_file = LICENSE.txt
project_urls =
        Documentation = https://i-vis-api.readthedocs.org
        Source = https://github.com/piechottam/i-vis-core
        Project = https://predict.informatik.hu-berlin.de

[bdist_wheel]
universal = 1

[options]
include_package_data = True,
python_requires = >=3.9
zip_safe = False

[pylint.MASTER]
jobs=5

[pylint.DESIGN]
max-parents=15

[pylint.BASIC]
good-names=db,df,fk,on,rv,i,pk,T,r,s,v

[pylint.MISCELLANEOUS]
notes=FIXME,XXX

[pylint.TYPECHECK]
ignored-modules=flask_sqlalchemy,flask_marshmallow
disable=line-too-long,unsubscriptable-object,too-few-public-methods,missing-module-docstring,missing-class-docstring,missing-function-docstring,import-outside-toplevel,no-self-use,too-many-instance-attributes,too-many-arguments
generated-members=db.session.add|db.session.commit|db.session.delete|db.session.merge|db.session.query|db.session.flush|pytest.lazy_fixture
extension-pkg-whitelist=lxml,orjson

[mypy]
python_version = 3.9
ignore-missing-imports = True
warn-unused-config = Trues
disallow-any-generics = True
disallow-untyped-calls = True
disallow-untyped-defs = True
disallow-incomplete-defs = True
check-untyped-defs = True
no-implicit-optional = True
warn-redundant-casts = True
warn-unused-ignores = True
warn-return-any = True
strict-equality = True
plugins = sqlalchemy.ext.mypy.plugin
