[metadata]
name = i-vis-core
description = Core functionality of Integrated Variant Information System (I-VIS)
long_description = file: README.md
long_description_content_type = text/markdown
author = Michael Piechotta
author_email = michael.piechotta@gmail.com
url = https://i-vis-api.readthedocs.org/
	
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
license_file = LICENSE.txt
project_urls =
        Documentation = https://i-vis-api.readthedocs.org
        Source = https://github.com/piechottam/i-vis-core
        Project = https://predict.informatik.hu-berlin.de

[bdist_wheel]
universal = 1

[options]
include_package_data = True,
python_requires = >=3.9
zip_safe = False

